<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="android.com.group18_hw06.MainActivity">

    <EditText
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:id="@+id/cityEditBox"
        android:hint="@string/city"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:id="@+id/countryEditBox"
        android:hint="@string/country"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="200dp"
        android:layout_marginTop="3dp"
        android:text="@string/submit"
        android:id="@+id/submit_btn"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="@string/favourites"
        android:id="@+id/favourites"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/savedCities"
        android:text="@string/savedCities"
        android:textStyle="bold"
        android:textSize="15dp"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/errorMsg"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:textStyle="bold"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view_main"/>
</LinearLayout>
