<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/ll_recycleDetail"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/dateLbl"
        android:textStyle="bold"
        android:id="@+id/dateDetailView"
        android:layout_marginLeft="60dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:id="@+id/timeDetailsView"
        android:layout_marginLeft="40dp"
        android:layout_height="wrap_content" />
<ImageView
    android:layout_width="120dp"
    android:id="@+id/imgLargeView"
    android:layout_gravity="center"
    android:layout_height="120dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="90dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/tempLbl"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/temp"
            android:text="abc"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/conditionLbl"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/condition"
            android:text="abc"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/pressLbl"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/pressure"
            android:text="abc"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="90dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/humidityLbl"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/humidity"
            android:text="abc"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="90dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/windLbl"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/wind"
            android:text="abc"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>